apps/wire-pod/wire-pod.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wire-pod
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wire-pod
  namespace: wire-pod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wire-pod
  template:
    metadata:
      labels:
        app: wire-pod
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1001
        runAsGroup: 1001
        fsGroup: 1001
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: wire-pod
        image: wire-pod-nonroot:20260717
        imagePullPolicy: Never
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
        - name: web
          containerPort: 8080
        - name: api
          containerPort: 8084
        volumeMounts:
        - name: data
          mountPath: /wire-pod/data
      volumes:
      - name: data
        hostPath:
          path: /var/wire-pod/data
          type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: wire-pod
  namespace: wire-pod
spec:
  type: NodePort
  selector:
    app: wire-pod
  ports:
  - name: http
    port: 80
    targetPort: 80
    nodePort: 30080
  - name: https
    port: 443
    targetPort: 443
    nodePort: 30443
  - name: web
    port: 8080
    targetPort: 8080
    nodePort: 32081
  - name: api
    port: 8084
    targetPort: 8084
    nodePort: 32084
