apps/wire-pod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wire-pod
  namespace: wire-pod
spec:
  ingressClassName: traefik
  rules:
  - host: wire-pod.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wire-pod
            port:
              number: 8080
